# phaser

./: .cquery  .gitignore  .gitmodules  .local.vimrc  CMakeLists.txt  README.md  dependencies.rosinstall  experiment_results.txt  gicp_results.txt  package.xml  screenshot-1579703795.cam  sph-results.txt
phaser/: CMakeLists.txt  README.md  package.xml
phaser/app/: packlo-app.cc
phaser/include/packlo/: packlo-node.h
phaser/include/packlo/common/: gflags-interface.h  ouster_tools.h  packet-converter.h  point-cloud-utils.h
phaser/include/packlo/controller/: distributor.h
phaser/include/soft/: complex.h  csecond.h  fft_grids.h  permroots.h  rotate_so3_fftw.h  soft_sym.h  weights.h  wrap_fftw.h
phaser/lib/SOFT/: makeweights.c  soft_fftw_nt.c  soft_fftw_pc.c  wignerTransforms_fftw.c  wrap_s2_rotate_fftw.c  wrap_soft_fftw.c
phaser/src/backend/alignment/: base-objective.cc  optimized-aligner.cc  phase-aligner.cc  range-based-aligner.cc
phaser/src/backend/registration/: sph-registration.cc
phaser/src/common/: gflags-interface.cc  point-cloud-utils.cc
phaser/src/common/data/: datasource-ply.cc  datasource-ros.cc  file-system-helper.cc
phaser/src/controller/: distributor.cc
phaser/src/model/: point-cloud.cc
phaser/test/rotation-alignment/: rotation-alignment-test.cc
phaser/test/sanity-check/: sanity-check-test.cc
phaser/test/transformation-alignment/: transformation-alignment-test.cc  voxgraph-alignment-test.cc
phaser/test/translation-alignment/: translation-alignment-test.cc
phaser_common/: CMakeLists.txt  package.xml
phaser_common/include/packlo/common/: dual-quaternion.h  math-utils.h  os1_64_config.h  rotation-utils.h  spherical-projection.h  (+1 more)
phaser_common/lib/tinyply/: tinyply.cc
phaser_common/src/common/: base-worker.cc  dual-quaternion.cc  gflags-interface.cc  math-utils.cc  metric-utils.cc  point-cloud-utils.cc  rotation-utils.cc  signal-utils.cc  spherical-feature.cc  spherical-projection.cc  spherical-sampler.cc  statistics-manager.cc  test-worker.cc  thread-pool.cc  translation-utils.cc
phaser_common/src/distribution/: bingham-mixture.cc  bingham-mle.cc  bingham-normalization-constant.cc  bingham-objective.cc  bingham-opt-mle.cc  bingham.cc  gaussian-mixture.cc  gaussian.cc
phaser_common/src/model/: function-value.cc  gmm-parameters.cc  ply-point-cloud.cc  point-cloud.cc  registration-result.cc  state.cc
phaser_common/test/common/: thread-pool-test.cc
phaser_common/test/distribution/: bingham-mixture-test.cc  bingham-test.cc  gaussian-mixture-test.cc  gaussian-test.cc
phaser_common/test/model/: function-value-test.cc
phaser_common/test/utils/: signal-utils-test.cc
phaser_core/: CMakeLists.txt  package.xml
phaser_core/include/igl/: histc.cpp  histc.h
phaser_core/include/soft/: OURmods.h  cospmls.h  fft_grids_so3.h  indextables.h  legendreTransforms.h  makeWigner.h  makeweights.h  rotate_so3_mem.h  rotate_so3_utils.h  s2_cospmls.h  s2_legendreTransforms.h  s2_semi_memo.h  so3_correlate_sym.h  soft.h  soft_fftw_pc.h  utils_so3.h  utils_vec_cx.h  wrap_fftw.h
phaser_core/lib/SOFT/: rotate_so3_fftw.c  s2_legendreTransforms.c  s2_semi_memo.c  wrap_soft_fftw_cor2.c
phaser_core/src/common/: core-gflags.cc
phaser_core/src/controller/: cloud-controller.cc  distributor.cc
phaser_core/src/experiments/: experiment-handler.cc
phaser_core/src/model/: registration-result.cc
phaser_core/test/: driver.cc
phaser_core/test/fusion/: laplace-pyramid-test.cc  pyramid-struct-test.cc
phaser_core/test/rotation-alignment/: rotation-alignment-test.cc
phaser_core/test/sanity-check/: sanity-check-test.cc
phaser_core/test/transformation-alignment/: transformation-alignment-test.cc  voxgraph-alignment-test.cc
phaser_core/test/translation-alignment/: spatial-correlation-test.cc  translation-alignment-test.cc
phaser_core/test/uncertainty-estimate/: rot-bingham-test.cc  rot-bmm-test.cc  trans-gauss-test.cc  trans-gm-test.cc
phaser_pre/: CMakeLists.txt  package.xml
phaser_pre/include/phaser_pre/: cloud-pre-processor.h
phaser_pre/src/: cloud-pre-processor.cc
phaser_pre/src/algorithm/: angle-based-ground-removal.cc  calc-smoothness.cc  cloud-segmentation.cc  cluster-points.cc  extract-loam-features.cc  image-gradient.cc  image-projection.cc  mark-occluded.cc
phaser_pre/src/command/: pass-through-gnd-filter-cmd.cc  voxel-grid-cmd.cc
phaser_pre/src/commands/: pass-through-gnd-filter-cmd.cc  segment-cloud-cmd.cc  voxel-grid-cmd.cc
phaser_pre/src/common/: pre-processor-gflags.cc  sse-mathfun-extension.cc  sse-mathfun.cc
phaser_pre/src/model/: cloud-segmentation.cc  cluster-result.cc  feature-extraction-result.cc  gradient-result.cc  ground-removal-result.cc  occlusion-result.cc  projection-result.cc  segmentation-result.cc  smoothness-result.cc
phaser_pre/test/: angle-based-ground-removal-test.cc  cloud-pre-processor-test.cc  cloud-segmentation-test.cc  cluster-points-test.cc  image-gradient-test.cc  image-projection-test.cc  loam-feature-extraction-test.cc  mark-occluded-test.cc
phaser_ros/: CMakeLists.txt  package.xml
phaser_ros/app/: packlo-app.cc  phaser-app.cc
phaser_ros/include/phaser/: packlo-node.h  phaser-node.h
phaser_ros/include/soft/: FFTcode.h  FST_semi_memo.h  oddweights.h  rotate_so3.h  s2_semi_fly.h  soft_fftw_nt.h  wignerTransforms_fftw.h
phaser_ros/src/: packlo-node.cc  phaser-node.cc
phaser_ros/src/model/: function-value.cc
phaser_ros/src/visualization/: plotty-visualizer.cc
phaser_test_data/: CMakeLists.txt  package.xml
phaser_test_data/cmake/: phaser-import-test-maps.cmake.in  phaser-test-data.cmake.in
phaser_test_data/test_clouds/experiment1/: ar247.ply  arche012.ply  arche101.ply  arche240.ply  arche241.ply  arche244.ply  cloud011.ply  cloud0358.ply  gonzen0013.ply  kitti254.ply  kitti263.ply  kitti303.ply  kitti367.ply  kitti429.ply  kitti559.ply  penguin77.ply  post_arche656.ply
phaser_test_data/test_clouds/rotation_and_translation/: ground_truth.txt
phaser_test_data/test_clouds/rotation_only/: ground_truth.txt
phaser_test_data/test_clouds/translation_only/: ground_truth.txt
(+446 files in other folders)
