<?xml version="1.0"?>
<package format="2">
  <name>packlo</name>
  <version>2.2.0</version>
  <description>foo</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>nav_msgs</depend>
  <depend>ouster_client</depend>
  <depend>ouster_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>opencv3_catkin</depend>
  <depend>cv_bridge</depend>
</package>
