<?xml version="1.0"?>
<package format="2">
  <name>phaser_core</name>
  <version>2.2.0</version>
  <description>foo</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>pcl_ros</depend>
  <depend>opencv3_catkin</depend>
  <depend>fftw3_catkin</depend>

  <depend>phaser_test_data</depend>
  <depend>phaser_common</depend>
  <depend>phaser_viz</depend>
  <depend>phaser_pre</depend>
</package>
