<?xml version="1.0"?>
<package format="2">
  <name>phaser_ros</name>
  <version>2.2.0</version>
  <description>foo</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>

  <depend>plotty</depend>

  <depend>phaser_core</depend>
  <depend>phaser_common</depend>
  <depend>phaser_viz</depend>
</package>
