<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>phaser_test_data</name>
  <version>1.0.0</version>
  <description>Phaser test data</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
